--- a/config/config.ini.example
+++ b/config/config.ini.example
@@ -34,13 +34,13 @@ fn_path_summary_json = storage/reporting/report_{day}.json
 ##                                        TELEGRAM                                       ##
 ## *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* ##
 [api_telegram]
-token_key = 6603889694:AAHSyjJ4pePjnHvQ69hpma5co_SHyW824hg
+token_key = 
 
 ## *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* ##
 ##                                        OPEN AI                                        ##
 ## *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* ##
 [api_openai]
-token_key = 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
+token_key = 
 
 ## *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* ##
 ##                                        GOOGLE                                         ##
