--- a/config/config.ini
+++ b/config/config.ini
@@ -42,6 +42,9 @@ token_key = 6603889694:AAHSyjJ4pePjnHvQ69hpma5co_SHyW824hg
 [api_openai]
 token_key = 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
 
+[openai]
+model_name = gpt-3.5-turbo-0125
+
 ## *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* ##
 ##                                        GOOGLE                                         ##
 ## *-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-* ##
